Regression: Make sure all edit buttons are styled as edit buttons
On a stub page (ie. no collapsed sections) where there is an h1
the edit button is unstyled and the page looks broken

This fixes it.

--- a/less/modules/editor.less
+++ b/less/modules/editor.less
@@ -1,6 +1,6 @@
 @import "../mixins.less";
 
-.section {
+.content {
 	.edit-page {
 		position: absolute;
 		background: url(../common/images/pagemenu/edit.png) 100% @headingMargin no-repeat;
